--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -1,17 +1,19 @@
 #project name
+SET(Sample "Sample")
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8) #cmake最低版本需求，不加入此行会受到警告信息
-PROJECT(Sample) #项目名称　　
-
+PROJECT(${Sample}) #项目名称　　
 #INCLUDE_DIRECTORIES(system ${PROJECT_SOURCE_DIR}/../lib)
 #
 ## lib directories
-LINK_DIRECTORIES(
-
-  #系统目录
-  /usr/local/lib
-  /use/lib
-)
-INCLUDE_DIRECTORIES(after  "../include/")
+#LINK_DIRECTORIES(
+#
+#  #项目引用第三方库
+#  ${PROJECT_SOURCE_DIR}/../lib/google/lib64
+#  
+#  #系统目录
+#  /usr/local/lib
+#  /use/lib
+#)
 
 # 源文件搜索
 FILE(GLOB_RECURSE SourceFiles 
@@ -19,5 +21,5 @@ FILE(GLOB_RECURSE SourceFiles
         
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall -pthread")
-ADD_EXECUTABLE(hello ${SourceFiles}) 
+ADD_EXECUTABLE(${Sample} ${SourceFiles}) 
 
